err/pymodem.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymodem'...
Compiling './lib/python3.5/site-packages/pymodem/chat.py'...
***   File "./lib/python3.5/site-packages/pymodem/chat.py", line 36
    print "Connected: %s" % self.device
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pymodem/cli.py'...
***   File "./lib/python3.5/site-packages/pymodem/cli.py", line 8
    print "++ %s: %s" % (field,data)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pymodem/gsm_03_38.py'...
***   File "./lib/python3.5/site-packages/pymodem/gsm_03_38.py", line 57
    print decode_septets(text)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pymodem/modem.py'...
***   File "./lib/python3.5/site-packages/pymodem/modem.py", line 131
    except SMSException, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pymodem/sms.py'...
***   File "./lib/python3.5/site-packages/pymodem/sms.py", line 157
    except StopIteration, ValueError:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pymodem-0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
